add more endpoints to manipulate the cart
